Section 5: USP List added. USP list assets located at pulic/usp-list. Layout fixes to reduce screen shift and uniform spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,7 +56,10 @@ img {
     }
     
     h2, .h2 {
-		@apply font-bold text-[38px] sm:text-5xl;
+		@apply font-bold text-[32px] sm:text-[36px] md:text-[40px] lg:text-[48px];
     }
 	
+	h3, .h3 {
+		@apply font-semibold text-3xl sm:text-4xl md:text-5xl;
+	}
 }
